# apple_assistant

./: .gitignore  BUILD_STRATEGY.md  DOWNLOAD_GUIDE.md  GITHUB_ACTIONS_TROUBLESHOOTING.md  GITIGNORE_EXPLANATION.md  MIGRATION_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  WINDOWS_BUILD_DEBUG.md  WINDOWS_BUILD_SOLUTIONS.md  build-all.sh  package-lock.json  package.json
.github/workflows/: build-simple.yml  build-windows.yml  build.yml
electron/: main.js  preload.js
scripts/: dev.js  test.js
src-tauri/: Cargo.toml  Cross.toml  tauri.conf.json
