[package]
name = "apple-assistant"
version = "0.1.0"
description = "Apple Assistant Desktop Application"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-open", "window-hide", "window-close", "window-maximize", "window-unmaximize", "window-unminimize", "window-start-dragging", "window-show", "window-minimize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"] 
